<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global -->
    <string name="app_name">Interaktive Präsentation</string>
    <string name="launcher_title_fav">Interaktive Präsentation</string>
    <string name="launcher_title_qr">IV QR-Code</string>
    <string name="hello_world">Hello world!</string>
    <string name="actionbar_icon_cd">@string/app_name</string>
    <string name="actionbar_add_cd">Hinzufügen</string>
    <string name="actionbar_back_cd">Zurück</string>
    <!-- ENDE Global -->


    <!-- ListCourses -->
    <string name="title_activity_list_courses">Meine Vorlesungen</string>
    <string name="list_courses_emptyList">Es wurden keine Kurse gefunden</string>
    <!-- ENDE ListCourses -->
	

    <!-- SearchCourse -->
    <string name="title_activity_search_course">Vorlesung hinzufügen</string>
    <string name="et_empty">Suchen</string>
    <!-- ENDE SearchCourse -->
	
	<string name="list_sessions_emtpyList">Es wurden keine Termine gefunden</string>
	<string name="progress_sessions_loading">Termine werden geladen&#8230;</string>
	
    <!-- CoursePreview -->
    <string name="progress_courses_loading">Kurse werden geladen&#8230;</string>
    <string name="btn_course_add">Vorlesung hinzufügen</string>
    <string name="dialog_pw_title">Die Vorlesung ist Passwortgeschützt!</string>
    <string name="dialog_pw_hint">Passwort</string>
    <string name="dialog_btn_ok">Hinzufügen</string>
    <string name="dialog_btn_cancel">Abbrechen</string>
    <!-- Ende CoursePreview -->

    <!-- CourseDetails -->
    <string name="title_activity_course_details">CourseDetails</string>
    <string name="course_details_sessiontab">DETAILS</string>
    <string name="course_details_detailstab">TERMINE</string>
    <!-- ENDE CourseDetails -->


    <!-- CourseDetailsDetails -->
    <string name="short_info">Kurzbeschreibung:</string>
    <!-- ENDE CourseDetailsDetails -->


    <!-- Questions -->
    <string name="questions_btn_skip">Frage zurückstellen</string>
    <string name="questions_btn_send">Antwort abgeben</string>
    <string name="question_answer">Antwort</string>
    <string name="question">Frage?</string>
    <!-- Questions ENDE -->
    
 	<!-- Questions Archive -->
    <string name="archive_btn_next">Weiter</string>
    <string name="archive_btn_prev">Zurück</string>
    <string name="correct_answer">Richtige Antwort</string>
    <string name="archive_empty">Das Archiv ist leer</string>
    <string name="progress_archive_loading">Daten werden geladen&#8230;</string>
    <!-- Questions Archive ENDE -->
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_question_archive">QuestionArchive</string>

</resources>