<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
>
	
     <TextView 
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     android:id="@+id/tx_question"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" 
     android:text="@string/question"
     style="@style/Question"
     />
     <Button
     android:layout_below="@id/tx_question"
     android:id="@+id/btn_answer_a"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" 
     android:singleLine="false"
     android:text="@string/question_answer"
     style="@style/QuestionButton"
     />
     <Button
     android:layout_below="@id/btn_answer_a"
     android:id="@+id/btn_answer_b"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" 
     android:singleLine="false"
     android:text="@string/question_answer"
     style="@style/QuestionButton"
     />
     <Button
     android:layout_below="@id/btn_answer_b"
     android:id="@+id/btn_answer_c"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" 
     android:singleLine="false"
     android:text="@string/question_answer"
     style="@style/QuestionButton"
     />
     <Button
     android:layout_below="@id/btn_answer_c"
     android:id="@+id/btn_answer_d"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" 
     android:singleLine="false"
     android:text="@string/question_answer"
     style="@style/QuestionButton"
     />
     <Button
     android:layout_below="@id/btn_answer_d"
     android:id="@+id/btn_answer_skip"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" 
     android:singleLine="true"
     android:text="@string/questions_btn_skip"
     />
     
</RelativeLayout>