<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_grey">
    
    <RelativeLayout
        android:id="@+id/actionbar"
        style="@style/Titlebar"
        android:layout_alignParentTop="true"
        android:gravity="top" >
		<ImageButton 
		    android:id="@+id/actionbar_logo"
		    android:src="@drawable/ic_menu_iv"
		    style="@style/Titlebar.Logo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:contentDescription="@string/actionbar_icon_cd"
		    android:layout_alignParentLeft="true"
		/>
        <ImageButton
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/actionbar_back_cd"
            android:src="@drawable/actionbar_up" 
            android:onClick="actionbarClick"
            />
        
        
        <ImageButton
        android:id="@+id/btn_action_info"
        android:src="@drawable/ic_menu_info"
        android:contentDescription="@string/actionbar_add_cd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:layout_marginRight="4dp"
        android:onClick="actionbarClick"
        />
        <ImageButton
        android:id="@+id/btn_action_fav"
        android:src="@drawable/ic_menu_star_off"
        android:contentDescription="@string/actionbar_add_cd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/btn_action_info"
        android:layout_centerVertical="true"
        android:background="@null"
        android:layout_marginRight="4dp"
        android:onClick="actionbarClick"
        />
        <TextView
            android:id="@+id/actionbar_title" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/actionbar_logo"
        	android:layout_toLeftOf="@id/btn_action_fav"
        	android:layout_alignBottom="@id/actionbar_logo"
        	style="@style/Titlebar.Title"
            />
    </RelativeLayout>
    <RelativeLayout
	    android:layout_alignParentBottom="true"
	    android:id="@+id/rl_progressbar"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:visibility="gone"
	    style="@style/ProgressbarList"
	    >
	    <ProgressBar
	        android:id="@+id/progressbar"
	        android:layout_alignParentLeft="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@android:style/Widget.ProgressBar.Small"/>
	    <TextView 
	        android:layout_toRightOf="@id/progressbar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/progress_sessions_loading"
	        style="@style/ProgressbarText"
	        />
	</RelativeLayout>
    <ListView 
		android:layout_above="@id/rl_progressbar"
		android:layout_below="@id/actionbar"
		android:id="@+id/lv_sessions" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:fadeScrollbars="true"
		android:background="@drawable/listview_rounded_corner"
		android:layout_margin="5dp"
		/>
    <TextView 
        android:id="@+id/tx_listsessions_emptyList"
        android:layout_width="fill_parent" 
   		android:layout_height="fill_parent" 
        android:text="@string/list_sessions_emtpyList"
        android:textSize="15sp"
        android:textColor="@color/font_on_bg_lgiht_grey"
        android:gravity="center_horizontal|center_vertical"
        />
    <ScrollView
        android:id="@+id/sv_course_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbar"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        style="@style/SVSessionDetails"
        >
	    <TextView 
	        android:id="@+id/tx_course_details"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        style="@style/SessionDetails"
	        />
    </ScrollView>
    

</RelativeLayout>
